приложение Grape. refactoring fronted, исправление поиска в справочнике сортов

--- a/grape/templates/jornal/index_jornal.html
+++ b/grape/templates/jornal/index_jornal.html
@@ -1,9 +1,9 @@
 {% extends 'index_template.html' %}
 
 {% block content %}
-<article class="main">
+
 <h4>Посадочные места винограда</h4>
-<table id="table">
+<table class="table table-bordered table-striped">
     <thead>
     <tr>
         <th>№ п/п</th>
@@ -19,7 +19,7 @@
     {% endfor %}
     </tbody>
 </table>
-</article>
+
 {% endblock %}
 
 {% block left %}
