--- a/grape/templates/app/enter.html
+++ b/grape/templates/app/enter.html
@@ -4,10 +4,10 @@
 {% if request.user.is_authenticated %}
     <p><span style="color: #3b635d; font-size:12px ">Добро пожаловать,</span><br>
         {{ request.user.username}}</p>
-    <p><a href="{% url 'logout' %}"><button class="button">Выход</button></a></p>
+    <p><a href="{% url 'logout' %}"><button class="btn btn-secondary btn-sm">Выход</button></a></p>
 {% else %}
     <p><a href="{% url 'registration' %}">Регистрация</a></p>
-    <p><a href="{% url 'login' %}"><button class="button">Вход</button></a></p>
+    <p><a href="{% url 'login' %}"><button class="btn btn-secondary btn-sm">Вход</button></a></p>
 {% endif %}
 </aside>
 
