--- a/grape/templates/index_template.html
+++ b/grape/templates/index_template.html
@@ -14,24 +14,24 @@
 <body>
     <header class="container-sm bg-white text-dark">
         <img src="{% static 'app/img/logo.png' %}" width="110px" height="auto"> <span class="logo">Виноград</span>
-        <div class="row align-items-center bg-light">
+        <div class="row align-items-center  bg-secondary text-white">
             <div class="col-sm-9">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
                   <div class="container-fluid">
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="/">Home</a>
+                          <a class="nav-link  text-white active" aria-current="page" href="/">Home</a>
                         </li>
                         {% if request.user.is_authenticated %}
                           <li class="nav-item">
-                          <a class="nav-link" href="/jornal/">Журнал работы</a>
+                          <a class="nav-link  text-white" href="/jornal/">Журнал работы</a>
                         </li>
                         {% else %}
                              <li class="nav-item"></li>
                         {% endif %}
                         <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          <a class="nav-link dropdown-toggle  text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Справочники
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -49,9 +49,9 @@
             <div class="col-lg fst-italic">
 
            {% if request.user.is_authenticated %}
-                Добро пожаловать, <span style="font-weight: bold">{{ request.user.username}}</span>  |  <a href="{% url 'logout' %}">Выход</a>
+                Добро пожаловать, <span style="font-weight: bold">{{ request.user.username}}</span>  |  <a class="text-white" href="{% url 'logout' %}">Выход</a>
            {% else %}
-                <a href="{% url 'login' %}">Вход</a>  |  <a href="{% url 'registration' %}">Регистрация</a>
+                <a class="text-white" href="{% url 'login' %}">Вход</a>  |  <a class="text-white" href="{% url 'registration' %}">Регистрация</a>
            {% endif %}
 
             </div>
