--- a/grape/templates/spravgrape/found.html
+++ b/grape/templates/spravgrape/found.html
@@ -6,7 +6,7 @@
      {{ title }}
     </div>
 
-<table>
+<table class="table table-striped table-bordered table-hover table-condensed">
     <thead>
     <tr>
         <th>Название сорта</th>
