--- a/grape/templates/spravgrape/grape_detail.html
+++ b/grape/templates/spravgrape/grape_detail.html
@@ -4,7 +4,7 @@
 <article class="main">
      <h3>Сорт {{ title }}</h3>
 <div class="sortable">
-    <table>
+    <table class="table table-bordered table-striped">
         <tr>
             <td width="40%">Синонимы:</td>
             <td width="60%"> {{ sort.alias }}</td>
