--- a/grape/templates/spravgrape/grape_list.html
+++ b/grape/templates/spravgrape/grape_list.html
@@ -7,12 +7,12 @@
     </div>
     <div class="found">
         <form action="found" method="get">
-            <button type="submit">Поиск</button>
-            <input type="text" maxlength="20" name="find">
+            <button type="submit" class="btn btn-secondary btn-sm">Поиск</button>
+            <input class="form-control-sm" type="text" maxlength="20" name="find">
     </form>
 
     </div>
-<table>
+<table class="table table-striped table-bordered table-hover table-condensed">
     <thead>
     <tr>
         <th>Название сорта</th>
@@ -33,7 +33,7 @@
         <td>{{ grape.frozen_re }}</td>
         <td>{{ grape.get_type_fl_display }}</td>
         <td>{{ grape.srok }}</td>
-        <td><img src="/files/{{ grape.img_url }}" width="100px" ></td>
+        <td><img src="/files/{{ grape.img_url }}" width="auto" height="100px"></td>
     </tr>
 
     {% endfor %}
