--- a/grape/static/app/css/style_app.css
+++ b/grape/static/app/css/style_app.css
@@ -12,10 +12,10 @@ and open the template in the editor.
 }
 
 body {
-    width: 100%;
-    margin: 5px auto;
-    background-color: lightgray;
-
+  /*  width: 100%;
+    margin: 5px auto;*/
+    /*background-color: lightgray;*/
+    background: green;
 }
 
 #header {
