--- a/grape/templates/app/enter.html
+++ b/grape/templates/app/enter.html
@@ -3,7 +3,7 @@
 <aside class="left">
 {% if request.user.is_authenticated %}
     <p><span style="color: #3b635d; font-size:12px ">Добро пожаловать,</span><br>
-        {{ request.user.username}}</p>
+        {{ request.user.first_name }}</p>
     <p><a href="{% url 'logout' %}"><button class="btn btn-secondary btn-sm">Выход</button></a></p>
 {% else %}
     <p><a href="{% url 'registration' %}">Регистрация</a></p>
