--- a/grape/templates/index_template.html
+++ b/grape/templates/index_template.html
@@ -7,8 +7,8 @@
     <title>{{title}}</title>
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
     <link href="{% static 'app/css/style_app.css' %}" type="text/css" rel="stylesheet">
+    <script src="{% static 'app/js/tinymce.min.js' %}"></script>
     <link rel="icon" href="data:;base64,=">
-
     {{ form.media }}
 </head>
 <body>
@@ -49,7 +49,7 @@
             <div class="col-lg fst-italic">
 
            {% if request.user.is_authenticated %}
-                Добро пожаловать, <span style="font-weight: bold">{{ request.user.username}}</span>  |  <a class="text-white" href="{% url 'logout' %}">Выход</a>
+                Добро пожаловать, <span style="font-weight: bold">{{ request.user.first_name }}</span>  |  <a class="text-white" href="{% url 'logout' %}">Выход</a>
            {% else %}
                 <a class="text-white" href="{% url 'login' %}">Вход</a>  |  <a class="text-white" href="{% url 'registration' %}">Регистрация</a>
            {% endif %}
@@ -58,7 +58,7 @@
         </div>
     </header>
 
-<section class="container bg-light">
+<main class="container bg-light">
   <div class="row">
     <div class="col-sm-2">
         <aside class="container">
@@ -75,12 +75,12 @@
            {% endblock %}
     </div>
   </div>
-</section>
+</main>
 
 <footer class="container text-white mt-auto py-3 bg-grey text-center">
      E&F &copy; 2024
 </footer>
-    <script src="{% static 'app/js/tinymce.min.js' %}"></script>
+
     <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
