--- a/grape/templates/users/registration.html
+++ b/grape/templates/users/registration.html
@@ -2,15 +2,17 @@
 
 {% block content %}
 <h2>{{ title }}</h2>
-    <h3>Новый пользователь</h3>
- <section >
+
+ <section class="container" >
+    <div class="form-control">
+        <h4>Новый пользователь</h4>
     <form action="" method="post">
         {% csrf_token %}
         {{ user_form.as_p }}
 
         <p><input type="submit" value="Регистрация"></p>
     </form>
-
+    </div>
 
 
 </section>
