--- a/grape/templates/users/useradded.html
+++ b/grape/templates/users/useradded.html
@@ -4,7 +4,7 @@
 
 
 <section >
-    <h3> Пользователь <u>{{ new_user }}</u> создан.</h3>
+    <h3> Пользователь <u>{{ new_user.first_name }} {{ new_user.last_name }}</u> создан.</h3>
     <a href="{% url 'login' %}"> Войти в аккаунт </a>
 </section>
 {% endblock %}
