--- a/grape/static/app/css/style_app.css
+++ b/grape/static/app/css/style_app.css
@@ -14,8 +14,7 @@ and open the template in the editor.
 body {
   /*  width: 100%;
     margin: 5px auto;*/
-    /*background-color: lightgray;*/
-    background: green;
+    background-color: #1a625b82;;
 }
 
 #header {
