--- a/grape/templates/spravgrape/grape_detail.html
+++ b/grape/templates/spravgrape/grape_detail.html
@@ -45,6 +45,10 @@
             <td>Вкус ягоды:</td>
             <td>{{ sort.get_br_vkus_display }}</td>
         </tr>
+        <tr>
+            <td>Сахар (BRIX):</td>
+            <td>{{ sort.brix }}</td>
+        </tr>
          <tr>
             <td>Размер ягоды:</td>
             <td>{{ sort.br_size}}</td>
