приложение Grape. 10012025 немного адаптивности таблиц

--- a/grape/templates/spravgrape/grape_list.html
+++ b/grape/templates/spravgrape/grape_list.html
@@ -12,7 +12,9 @@
     </form>
 
     </div>
-<table class="table table-striped table-bordered table-hover table-condensed">
+
+
+<table class="table table-bordered table-striped">
     <thead>
     <tr>
         <th>Название сорта</th>
