--- a/grape/templates/index_template.html
+++ b/grape/templates/index_template.html
@@ -4,12 +4,24 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
     <link href="{% static 'app/css/style_app.css' %}" type="text/css" rel="stylesheet">
     <script src="{% static 'app/js/tinymce.min.js' %}"></script>
     <link rel="icon" href="data:;base64,=">
     {{ form.media }}
+    <style>
+    @media screen and (max-width: 600px) {
+        table {
+            width: 100%;
+        }
+        th, td {
+            display: block;
+            width: 100%;
+        }
+    }
+</style>
 </head>
 <body>
     <header class="container-sm bg-white text-dark">
